Fix more responsive for break points down to 355, lets see what this squashes to in real life

--- a/css/dataCalculator.css
+++ b/css/dataCalculator.css
@@ -60,7 +60,7 @@ form {
       "main head"
       "main foot";
     grid-template-rows: 380px 1fr;
-    grid-template-columns: 50%;
+    grid-template-columns: auto 500px;
   }
 
   .nav {
@@ -77,7 +77,7 @@ form {
     position: absolute;
     top: 0;
     right: 0;
-    width: calc(50% - 2em);
+    width: 500px;
     height: 100%;
     background: transparent;
     z-index: 4;
@@ -85,7 +85,7 @@ form {
     background-size: contain;
     background-repeat: no-repeat;
     pointer-events: none;
-    background-position: center;
+    background-position: center top;
   }
 
   form {
